# music_game_engine

./: .gitignore  ANDROID_PACKAGING.md  BUGFIX_DESCRIPTOR_POOL.md  CHART_PARSER.md  CIRCLE_MODE_INPUT.md  CMakeLists.txt  CORE_ENGINE.md  EDITOR_SYSTEM.md  GAMEPLAY_INTEGRATION.md  GAME_MODES.md  INPUT_SYSTEM.md  INPUT_SYSTEM_README.md  LICENSE  OUT_OF_SCOPE.md  README.md  RENDERING_PLAN.md  RENDERING_README.md  RENDERING_SYSTEM.md  RESOURCE_MANAGEMENT.md  SCENE_VIEWER.md  UNIFIED_CHART_FORMAT.md  test_chart_parser.cpp
Projects/BandoriSandbox/: CMakeLists.txt  project.json  start_screen.json
Projects/BandoriSandbox/assets/charts/: demo.json
Projects/BandoriSandbox/src/: BandoriRenderer.cpp  BandoriRenderer.h  main.cpp
Projects/test/: music_selection.json  start_screen.json
Projects/test/assets/charts/: Aa_circle_hard.json  Aa_drop2d_easy.json  Aa_drop2d_hard.json  Aa_drop2d_medium.json  Aa_drop3d_hard.json  Aa_easy.json  Aa_hard.json  Aa_medium.json  Aa_scan_hard.json  Ab_drop2d_easy.json  Ab_drop2d_medium.json  Ac_drop2d_easy.json  Ac_drop2d_hard.json  Ac_drop2d_medium.json  Ba_easy.json  Ba_hard.json  Ba_medium.json  demo.json
Projects/test/assets/materials/: A.mat  Aa_drop2d_hard__playfield_hit_zone_line.mat  Aa_drop3d_hard__playfield_side_posts.mat  Test.mat  default_arcaea_arc_note_blue_shadow.mat  default_arcaea_arc_note_red.mat  default_arcaea_arc_note_red_shadow.mat  default_arcaea_arctap_note_shadow.mat  default_arcaea_playfield_ground.mat  default_arcaea_playfield_judgment_bar.mat  default_arcaea_playfield_sky_line.mat  default_bandori_click_note.mat  default_bandori_hold_note_head.mat  default_bandori_hold_note_head_active.mat  default_bandori_playfield_hit_zone_line.mat  default_bandori_playfield_lane_divider.mat  default_bandori_playfield_track_surface.mat  default_cytus_hold_note_body.mat  (+8 more)
Projects/try/: project.json  start_screen.json
android/: gradlew.bat  local.properties  settings.gradle.kts
android/app/: build.gradle.kts
docs/: MEMORY.md  ai_editor_copilot.md  design_choices.md  devlog.md  sys1_rendering.md  sys2_resources.md  sys3_core_engine.md  sys4_input.md  sys5_gameplay.md  sys6_game_modes.md  sys7_editor.md  sys8_android.md
docs/UI_design/: .design-canvas.state.json  MIGRATION.md  Music Game Engine.html  components.jsx  tokens.js
docs/UI_design/screens/: music-selection.jsx  player-settings.jsx  project-hub.jsx  song-editor.jsx  start-screen.jsx
docs/UI_design/uploads/: AssetBrowser.h  GameFlowPreview.h  GifPlayer.cpp  GifPlayer.h  ImGuiLayer.h  ImageEditor.cpp  ImageEditor.h  MEMORY.md  SettingsPageUI.cpp  SongEditor.h  StartScreenEditor.cpp  StartScreenEditor.h  devlog.md  sys4_input.md  sys6_game_modes.md  sys8_android.md  ui_design.md
engine/assets/copilot_skills/: _common.md  arcaea.md  bandori.md  cytus.md  lanota.md
engine/include/MusicGameEngine/: AudioEngine.h  Camera.h  ChartLoader.h  ChartTypes.h  Engine.h  GameModeRenderer.h  Renderer.h
engine/src/: main.cpp
engine/src/android/: AndroidEngine.cpp  AndroidEngine.h  AndroidEngineAdapter.cpp  AndroidEngineAdapter.h  AndroidFileIO.cpp  AndroidFileIO.h  AndroidSwapchain.cpp  AndroidVulkanContext.cpp  CMakeLists.txt  ImGuiLayerStub.cpp  android_main.cpp
engine/src/android/stubs/GLFW/: glfw3.h
engine/src/core/: ECS.h  SceneNode.cpp  Transform.h
engine/src/editor/: AIChatRequest.cpp  AIChatRequest.h  AIEditorClient.cpp  AIEditorClient.h  AIEditorConfig.cpp  AIEditorConfig.h  ChartAudit.cpp  ChartAudit.h  ChartEditOps.cpp  ChartEditOps.h  ChartSnapshot.h  ChartStyle.cpp  ChartStyle.h  CopilotSkill.cpp  CopilotSkill.h  ShaderGenClient.cpp  ShaderGenClient.h
engine/src/engine/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioEngine.cpp  AudioEngine.h  Engine.cpp  Engine.h  GameClock.h  IPlayerEngine.h
engine/src/game/: PlayerSettings.cpp  PlayerSettings.h
engine/src/gameplay/: HitDetector.cpp  HitDetector.h  JudgmentDisplay.h  JudgmentSystem.h  ScoreTracker.h
engine/src/input/: GestureRecognizer.cpp  GestureRecognizer.h  InputManager.h  ScreenMetrics.h  TouchTypes.h
engine/src/renderer/: LineBatch.h  Material.cpp  Material.h  MaterialAsset.cpp  MaterialAsset.h  MaterialAssetLibrary.cpp  MaterialAssetLibrary.h  MaterialSlots.cpp  MaterialSlots.h  MeshRenderer.cpp  MeshRenderer.h  PostProcess.cpp  QuadBatch.cpp  QuadBatch.h  RenderTypes.h  Renderer.cpp  ShaderCompiler.cpp  ShaderCompiler.h
engine/src/ui/: AssetBrowser.h  GameFlowPreview.cpp  GameFlowPreview.h  GifPlayer.cpp  GifPlayer.h  ImGuiLayer.cpp  MusicSelectionEditor.cpp  MusicSelectionEditor.h  PreviewAspect.h  ProjectHub.cpp  ProjectHub.h  SceneViewer.cpp  SceneViewer.h  SettingsEditor.cpp  SettingsEditor.h  SettingsPageUI.h  SongEditor.cpp  SongEditor.h  StartScreenEditor.cpp  StartScreenEditor.h
engine/tests/: chart_roundtrip_test.cpp
shaders/: bloom_downsample.comp  bloom_upsample.comp  composite.frag  composite.vert  line.frag  line.vert  mesh.frag  mesh.vert  mesh_glow.frag  mesh_gradient.frag  mesh_pulse.frag  mesh_scroll.frag  mesh_unlit.frag  quad.frag  quad.vert  quad_glow.frag  quad_gradient.frag  quad_pulse.frag  quad_scroll.frag  quad_unlit.frag
src/: main.cpp
src/core/: SceneNode.h
src/engine/: AudioEngine.cpp  Engine.cpp  Engine.h
src/game/chart/: ChartLoader.cpp  ChartLoader.h
src/game/modes/: ArcaeaRenderer.cpp  BandoriRenderer.cpp  BandoriRenderer.h  CytusRenderer.h  GameModeRenderer.h  LanotaRenderer.cpp  LanotaRenderer.h  PhigrosRenderer.cpp  PhigrosRenderer.h
src/renderer/: LineBatch.cpp  MeshRenderer.cpp  ParticleSystem.cpp  ParticleSystem.h  PostProcess.cpp  PostProcess.h  QuadBatch.cpp  RenderTypes.h  Renderer.cpp  Renderer.h
src/renderer/vulkan/: CommandManager.cpp  CommandManager.h  DescriptorManager.h  Pipeline.cpp  Pipeline.h  RenderPass.h  Swapchain.cpp  Swapchain.h  SyncObjects.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  SceneViewer.cpp  SceneViewer.h
test_charts/: arcaea_demo.aff  bandori_demo.json  cytus_demo.xml  lanota_demo.lan  unified_demo.json
tools/: analyze_audio.py  build_apk.bat  generate_summary_docx.py  setup_android_sdk.bat
(+99 files in other folders)
